@@ -1,3 +1,12 @@
+2018-03-08  Keith Miller  <keith_miller@apple.com>
+
+        Use asm instead of __asm__ in WTFBreakpointTrap so MSVC builds
+        https://bugs.webkit.org/show_bug.cgi?id=183465
+
+        Reviewed by Michael Saboff.
+
+        * wtf/Assertions.h:
+
 2018-03-07  Filip Pizlo  <fpizlo@apple.com>
 
         Make it possible to randomize register allocation
